# reps

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  reps.py
app/: config.py  executor.py  focus.py  main.py  models.py  scheduler.py  stats.py  storage.py  tags.py
app/frontend/: app.js  index.html  style.css
docs/: ML_TRACK.md
docs/superpowers/plans/: 2026-07-01-reps-coding-gym.md  2026-07-02-ml-drills-track.md
problems/: 3sum.json  activations-forward.json  ad-exp.json  ad-linear.json  ad-log.json  ad-matmul.json  ad-mean.json  ad-relu.json  ad-sigmoid.json  ad-softmax.json  ad-sum.json  ad-tanh.json  add-and-search-words.json  alien-dictionary.json  batchnorm-forward.json  best-time-buy-sell-stock.json  binary-tree-level-order-traversal.json  binary-tree-maximum-path-sum.json  causal-self-attention.json  climbing-stairs.json  clone-graph.json  cml-classification-metrics.json  cml-confusion-matrix.json  cml-kmeans-step.json  cml-knn-classify.json  cml-linreg-gd.json  cml-linreg-normal-eq.json  cml-logistic-regression.json  cml-naive-bayes.json  cml-pca.json  cml-sigmoid-bce.json  cml-softmax-regression.json  cml-standardize.json  coin-change.json  combination-sum-iv.json  combination-sum.json  construct-tree-preorder-inorder.json  container-with-most-water.json  contains-duplicate.json  cosine-similarity.json  (+116 more)
tests/: conftest.py  test_api.py  test_config.py  test_executor.py  test_focus.py  test_models.py  test_problems_valid.py  test_scheduler.py  test_smoke.py  test_stats.py  test_storage.py  test_tags.py
(+1 files in other folders)
